Changes in 0.80.1:
  o Client Changes:
    * user names and passwords are no longer allowed in repository maps
      (user configuration entries must be used instead)
  o Building packages:
    * Java dependency generation is now enabled; Java dependency enforcement
      is still disabled.

Changes in 0.80.0:
  o Client Changes:
    * The logic for defining updates across a hierarchy has been completely
      replaced. Instead of rigidly following the trove digraph, we flatten
      the update to choose how troves get updated, and walk the hierarchy
      to determine which updates to actually apply.
    * Dependency resolution could include troves which caused duplicate 
      removals for the troves those included troves replace
    * Chroot handling was broken in 0.71.2 and prevented the user name
      lookup code for the chroot from exiting back out of the chroot
    * showchangeset on relative changesets now displays them as jobs.
    * query and queryrep now exclude components if they match their 
      package name
    * Conary cleans up rollbacks when a changeset fails to apply.
      Previously, an invalid changeset was saved in the rollback
      stack, which made applying it impossible
    * Removed direct instantiation of NetworkRepositoryClient object; it
      should be created by calling ConaryClient
    * repositoryMap should not contain usernames and passwords now; user
      config file option should hold those instead (user *.rpath.org user pass)
    * If a user name is given without a password the password will be prompted
      for if the repository returns a permissions error
    * added --components parameter to q and rq to not hide components
    * conary update --full-versions --flavors now will work as expected
    * fixed a bug with conary erase foo=/branchname
    * When in multi-threaded mode, the download thread now checks to see
      if the update thread wants to exit.  This fixes many of the