@@ -2,6 +2,8 @@ Changes in 0.80.1:
   o Client Changes:
     * user names and passwords are no longer allowed in repository maps
       (user configuration entries must be used instead)
+    * clone now allows you to a binary onto the same branch, without having to 
+      reclone the source.
   o Building packages:
     * Java dependency generation is now enabled; Java dependency enforcement
       is still disabled.
